# DesigniBackEnd

./: CMakeLists.txt  README.md  main.cpp
src/Controller/: APIController.cpp  APIController.h  HomeDesignController.cpp  HomeDesignController.h
src/Model/: AreaToDimensionsCalculator.cpp  AreaToDimensionsCalculator.h  Cluster.cpp  Cluster.h  CorridorConnectionManager.cpp  CorridorConnectionManager.h  CorridorDimensionsCalculator.h  Design.cpp  Design.h  DesignCompactnessRefactor.cpp  DesignCompactnessRefactor.h  DesignCompactnessSorter.cpp  DesignCompactnessSorter.h  DesignGenerator.cpp  DesignGenerator.h  DesignGeometryManager.cpp  DesignGeometryManager.h  DesignOutlines.cpp  DesignOutlines.h  DesignRefactor.h  DesignRepository.cpp  DesignRepository.h  DesignToDoublyLines.cpp  DesignToDoublyLines.h  DesignValidator.cpp  DesignValidator.h  DesignWallGenerator.cpp  DesignWallGenerator.h  DesignsSorting.h  Door.h  HorizontalCorridorDimensionsCalculator.cpp  HorizontalCorridorDimensionsCalculator.h  Line.cpp  Line.h  Opening.h  Point.cpp  Point.h  Polygon.cpp  Polygon.h  RectQML.h  (+16 more)
src/Model/BuildingDesigner/: BuildingDesigner.cpp  BuildingDesigner.h  BuildingDesignerCorridorAboveLiving.cpp  BuildingDesignerCorridorAboveLiving.h  BuildingDesignerCorridorBesideLiving.cpp  BuildingDesignerCorridorBesideLiving.h  BuildingSecondFloorDesign.cpp  BuildingSecondFloorDesign.h  CorridorDesigner.cpp  CorridorDesigner.h  RoomEntity.h
src/Model/Land/: CityGrid.cpp  CityGrid.h  DrawStreet.cpp  DrawStreet.h  HomeLand.cpp  HomeLand.h  Land.cpp  Land.h  LandDivision.cpp  LandDivision.h  LandDivisionBasedOnInnerDesign.cpp  LandDivisionBasedOnInnerDesign.h  LandDivisionBasedOnLandArea.cpp  LandDivisionBasedOnLandArea.h  LandDivisionBasedOnMaximizeConnections.cpp  LandDivisionBasedOnMaximizeConnections.h  LandDivisionBasedOnMinimizeAcuteAngles.cpp  LandDivisionBasedOnMinimizeAcuteAngles.h  LandDivisionBasedOnMinimizeSmallDimensions.cpp  LandDivisionBasedOnMinimizeSmallDimensions.h  LandDivisionBasedOnRatios.cpp  LandDivisionBasedOnRatios.h  LandDivisionBasedOnSidesConvergence.cpp  LandDivisionBasedOnSidesConvergence.h  LandNetwork.cpp  LandNetwork.h  LandNetworkByScaling.cpp  LandNetworkByScaling.h  (+2 more)
src/Utils/: LogLevel.h  Logging.cpp  Logging.h  MathUtils.cpp  MathUtils.h  RoomTypeUtils.cpp  RoomTypeUtils.h  UniqueIdGenerator.cpp  UniqueIdGenerator.h
src/View/: ConsoleResultView.cpp  ConsoleResultView.h  ConstInputView.cpp  ConstInputView.h  DesignResultView.cpp  DesignResultView.h  JsonExtraction.cpp  JsonExtraction.h  JsonInputView.cpp  JsonInputView.h  UserInputView.cpp  UserInputView.h
(+46 files in other folders)
